--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
       with:
         node-version: '14'
 
+    - name: Set up working directory
+      run: cd cicd-verificationlab
+
     - name: Install dependencies
       run: npm install
 
