--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         node-version: '14'
 
     - name: Set up working directory
-      run: cd cicd-verificationlab
+      run: cd cicd
 
     - name: Install dependencies
       run: npm install
