--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,18 @@ jobs:
       with:
         node-version: '14'
 
-    - name: Set up working directory
-      run: cd cicd-verificationlab/cicd
-
     - name: Install dependencies
       run: npm install
 
     - name: Test
       run: npm test
 
-    - name: Build
-      run: npm run build
+  deploy:
+      needs: build
+      runs-on: windows-latest
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main' && !contains(github.event.head_commit.message, '[skip ci]')
+  
+      steps:
+        - name: Checkout repository
+          uses: actions/checkout@v2
+
